# matchbox-themes-extra

./: .autoipkg  ChangeLog  Makefile.am  autogen.sh  configure.ac  make-ipks.sh
Clearlooks/: Makefile.am
Clearlooks/background/: Makefile.am
Clearlooks/icons/: Makefile.am
Clearlooks/matchbox/: Makefile.am  Notes  theme.desktop.in  theme.xml
Industrial/: Makefile.am
Industrial/icons/: Makefile.am
Industrial/matchbox/: Makefile.am  theme.desktop.in  theme.xml
ape/: Makefile.am
ape/matchbox/: Makefile.am  theme.desktop  theme.xml
borillo/matchbox/: Makefile.am
expose/: Makefile.am
expose/background/: Makefile.am
expose/gtk-2.0/: Makefile.am  bc (copy).xpm  gtkrc
expose/gtk-2.0/icons/: Makefile.am
expose/icons/: Makefile.am
expose/matchbox/: Makefile.am  theme.desktop.in  theme.xml
mbcrystal/: Makefile.am  package-icons.sh
mbcrystal/background/: Makefile.am
mbcrystal/gtk-2.0/: Makefile.am  gtkrc
mbcrystal/icons/: Makefile.am
mbcrystal/matchbox/: Makefile.am  theme.desktop  theme.desktop.in  theme.xml
mbssstudiopro/matchbox/: Makefile.am  theme.desktop  theme.xml
pocketmb/matchbox/: theme.desktop  theme.xml
