# Process this file with autoconf to produce a configure script.
AC_INIT(mbcrystal/matchbox/theme.xml)
AM_INIT_AUTOMAKE(matchbox-themes-extra, 0.3)
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_INSTALL

AC_OUTPUT([
Makefile
mbcrystal/Makefile
mbcrystal/background/Makefile
mbcrystal/gtk-2.0/Makefile
mbcrystal/matchbox/Makefile
mbcrystal/icons/Makefile
Industrial/Makefile
Industrial/matchbox/Makefile
Industrial/icons/Makefile
expose/Makefile
expose/matchbox/Makefile
expose/icons/Makefile
expose/background/Makefile
expose/gtk-2.0/Makefile
expose/gtk-2.0/icons/Makefile
])
