pngs =   \
broken-0.png       gpe-irc.png         mbfolder.png      no-link-0.png     \
dillo.png          gpe-sketchbook.png  mbfolderprev.png  signal-1-40.png   \
gpe-bluetooth.png  gpe-timesheet.png   signal-41-60.png  \
gpe-calendar.png   gpe-today.png       signal-61-80.png  \
gpe-contacts.png   gpe-todo.png        signal-81-100.png \
mbmusicfolder.png  mbpicturefolder.png  mbmoviefolder.png  minimo.png      \
gpe-edit.png       mbdesktop.png       mbmoviefile.png     \
mbnoapp.png


iconsdir = $(datadir)/icons/Industrial/48x48/apps
icons_DATA = $(pngs) 

EXTRA_DIST = $(pngs) 
