SUBDIRS = icons

files =   \
 arrow_up1.png   button1.png  spin1.png                                   \
 arrow_up2.png   button2.png  in.png        spin2.png                     \
 arrow_down1.png   background.png  button3.png  obutton1.png  spin3.png   \
 arrow_down2.png   button4.png  obutton2.png  trough.png                  \
 arrow_left1.png   bc-dark.xpm     check1.png   option1.png   up.png      \
 arrow_left2.png   bc-light.xpm    check2.png   option2.png               \
 arrow_right1.png  bc.xpm          default.png  radio1.png                \
 arrow_right2.png  blank.png       gtkrc        radio2.png


filesdir = $(datadir)/themes/expose/gtk-2.0
files_DATA = $(files) 

EXTRA_DIST = $(files) 
