pngs =   \
   gpe-sketchbook.png  mbdesktop.png      mbnoapp.png                      \
   dillo.png           gpe-terminal.png    mbdown.png         mbremove.png \
   figment.png         gpe-timesheet.png   mbfolder-util.png  mbup.png     \
   gpe-calculator.png  gpe-today.png       mbfolder.png       minimo.png   \
   gpe-calendar.png    gpe-todo.png        mbfolderprev.png                \
   gpe-contacts.png    mbadd.png           mbmenu.png

iconsdir = $(datadir)/icons/mbcrystal/48x48/apps
icons_DATA = $(pngs) 

EXTRA_DIST = $(pngs) 
