pngs =  button-up.png titlebar-tile.png \
	background.png   dockbg.png     titlebar-end.png \
	button-down.png  titlebar-start.png buttsmallmindown.png \
        buttsmallmaxdown.png buttsmallclosedown.png

themesdir = $(datadir)/themes/mbssstudiopro/matchbox
themes_DATA = theme.xml $(pngs) theme.desktop

EXTRA_DIST = theme.xml $(pngs) theme.desktop
