files =   \
gtk-goto-first.png     gtk-save.png                                     \
cdplayer-eject.png        gtk-goto-last.png      gtk-select-color.png   \
gtk-add.png               gtk-goto-top.png       gtk-select-font.png    \
gtk-cancel.png           gtk-help.png           gtk-stop.png           \
gtk-cdrom.png             gtk-home.png           gtk-undo.png           \
gtk-close.png             gtk-index.png          gtk-zoom-100.png       \
gtk-copy.png              gtk-jump-to.png        gtk-zoom-fit.png       \
gtk-cut.png               gtk-new.png            gtk-zoom-in.png        \
gtk-delete.png            gtk-ok.png             gtk-zoom-out.png       \
gtk-dialog-error.png      gtk-open.png           iconrc                 \
gtk-dialog-info.png       gtk-paste.png          panel-find.png         \
gtk-dialog-question.png   gtk-preferences.png    panel-lockscreen.png   \
gtk-dialog-warning.png    gtk-print-preview.png  panel-screenshot.png   \
gtk-find-and-replace.png  gtk-print.png                                 \
gtk-find.png              gtk-quit.png                                  \
gtk-go-back.png           gtk-redo.png                                  \
gtk-go-down.png           gtk-refresh.png                               \
gtk-go-forward.png        gtk-revert.png                                \
gtk-go-up.png             gtk-save-as.png                               \
gtk-goto-bottom.png       stock_multimedia.png  

filesdir = $(datadir)/themes/expose/gtk-2.0/icons
files_DATA = $(files) 

EXTRA_DIST = $(files) 
